--- a/_toc.yml
+++ b/_toc.yml
@@ -9,7 +9,7 @@ parts:
     numbered: true
     chapters:
       - file: chapters/01_pandas
-#      - file: chapters/02_reproducible
+      - file: chapters/02_reproducible
 #      - file: chapters/03_iterators
 #      - file: chapters/04_debugging
   - caption: Afterword
