Add chapter 4 content.

--- a/_toc.yml
+++ b/_toc.yml
@@ -11,7 +11,7 @@ parts:
       - file: chapters/01_pandas
       - file: chapters/02_reproducible
       - file: chapters/03_iterators
-#      - file: chapters/04_debugging
+      - file: chapters/04_debugging
   - caption: Afterword
     chapters:
       - file: chapters/references
